[project]
name = "digital-dna-vision"
version = "0.1.0"
description = "Proyecto para comprobar si una imagen ha sido modificada o alterada por algún software de edición de imágenes. También permite recuperar los metadatos de la imagen."
readme = "README.md"
requires-python = "==3.14.2"
dependencies = [
    "matplotlib==3.10.8",
    "numpy==2.4.4",
    "opencv-python==4.13.0.92",
]
